--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
     <footer class="footer py-3">
         <div class="container">
             <p class="small mb-0 text-light">
-                &copy; <script>document.write(new Date().getFullYear())</script> Created With <i class="ti-heart text-danger"></i> By <a href="http://devcrud.com" target="_blank"><span class="text-danger" title="Bootstrap 4 Themes and Dashboards">Ilia.kh</span></a> 
+                &copy; <script>document.write(new Date().getFullYear())</script> Created With <i class="ti-heart text-danger"></i> By <a href="https://github.com/Its-ili/its-ili" target="_blank"><span class="text-danger" title="Bootstrap 4 Themes and Dashboards">Ilia.kh</span></a> 
             </p>
         </div>
     </footer>
